Trying to fix search bar, added overflow.

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -127,6 +127,7 @@ tbody
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
+  overflow: auto;
 }
 
 .ta-table-header:hover
@@ -139,3 +140,4 @@ tbody
 {
   visibility: hidden;
 }
+
